--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "core-js": "^3.8.3",
     "postcss": "^8",
     "tailwindcss": "^3",
-    "vue": "^3.2.13"
+    "vue": "^3.2.13",
+    "vue-router": "^4.0.14",
+    "vueperslides": "^3.3.2",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
